# poker-with-haskell

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  poker-with-haskell.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  poker-with-haskell-0.1.0.0-inplace.conf
src/: Card.hs  Deck.hs  Hand.hs  HandRank.hs  Pick.hs  Picking.hs  Randy.hs
test/: CardTest.hs  DeckTest.hs  HandRankTest.hs  Main.hs
