cabal-version:   3.4
name:            poker-with-haskell
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      ivankrsnik93@gmail.com
author:          Ivan Krsnik
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Card
        Deck
        Hand
        HandRank
        Randy

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: DataKinds FlexibleContexts
    ghc-options:        -Wall
    build-depends:
        base ^>=4.17.2.1,
        vector-sized,
        containers,
        random,
        random-shuffle

executable poker-with-haskell
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        vector-sized,
        poker-with-haskell

test-suite poker-with-haskell-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        CardTest
        DeckTest
        HandRankTest

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        poker-with-haskell,
        HUnit
